--- a/src/common/button/button.css
+++ b/src/common/button/button.css
@@ -1,20 +1,20 @@
 .button--main--container {
 	width: 100%;
 	height: 100%;
-	border-radius: 10px;
-	background: rgb(85, 18, 218);
+	border-radius: 5px;
 	overflow: hidden;
 	border: none;
 	outline: none;
 	width: 100%;
 	height: 100%;
+	background: transparent;
 	text-align: center;
-	font-size: 18px;
-	color: white;
+	font-size: 15px;
+	color: rgb(46, 77, 199);
 	cursor: pointer;
 }
 
 .button--main--container.disabled--container {
-	background: gray;
 	pointer-events: none;
+	color: gray;
 }
