--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,15 +1,83 @@
 .post--main--container {
 	display: flex;
-	margin: 30px 0;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 0;
 	cursor: pointer;
-	border-radius: 10px;
-	border: 0.5px solid rgb(203, 201, 201);
+	border-radius: 5px;
+	border: 0.5px solid rgba(216, 216, 216, 0.249);
 	overflow: hidden;
+	-webkit-tap-highlight-color: transparent;
+	width: 600px;
 }
 
 .post--main--container:hover {
-	border: none;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
 		rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
 		rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.post--main--container--image {
+	text-align: center;
+	/* width: 600px; */
+	height: 300px;
+	width: 95%;
+}
+
+.post--main--container--interaction {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
+	width: 95%;
+	padding-left: 20px;
+}
+
+.post--main--container--detail--title {
+	pointer-events: none;
+	color: white;
+	font-weight: bolder;
+	font-size: 28px;
+	text-align: center;
+	font-style: italic;
+	text-decoration: underline;
+}
+
+.post--main--container--detail--body {
+	pointer-events: none;
+	color: gray;
+	padding: 15px;
+	font-size: 20px;
+	text-align: center;
+	letter-spacing: 0.5px;
+}
+
+@media (max-width: 650px) {
+	.post--main--container {
+		width: 100%;
+	}
+
+	.post--main--container--image {
+		width: 95%;
+	}
+
+	.post--main--container--interaction {
+		padding-left: 0px;
+	}
+
+	.post--main--container--detail {
+		width: auto;
+		padding: 0 10px;
+		text-align: center;
+	}
+
+	.post--main--container--detail--title {
+		font-size: 20px;
+	}
+
+	.post--main--container--detail--body {
+		font-size: 13px;
+		color: gray;
+	}
 }
