--- a/src/views/app/App.css
+++ b/src/views/app/App.css
@@ -1,4 +1,8 @@
 .app--main--container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	height: calc(var(--vh, 1vh) * 100);
 	width: 100%;
 	position: relative;
