--- a/src/views/comments/comments.css
+++ b/src/views/comments/comments.css
@@ -4,24 +4,47 @@
 	left: -100%;
 	height: 100%;
 	width: 100%;
-	background: rgb(227, 227, 227);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	z-index: 100;
+	background: rgb(227, 225, 225);
 	transition: all 0.3s;
+	overflow: hidden;
+	background: black;
 }
 
-.comments--main--container.comments--opened {
+.comments--main--container.open {
 	left: 0;
 }
 
 .comments--main--container--close {
-	height: 60px;
+	height: 40px;
+	width: 100%;
+	text-align: center;
 }
 
 .comments--main--container--list {
-	height: calc(100% - 140px);
+	height: calc(100% - 190px);
 	overflow: auto;
+	width: 700px;
 }
 
-.comments--main--container--input {
-	height: 80px;
+.comments--main--container--form {
+	height: 150px;
+	width: 710px;
+	padding-left: 10px;
+}
+
+@media (max-width: 700px) {
+	.comments--main--container--list {
+		width: 95%;
+	}
+
+	.comments--main--container--form {
+		height: 150px;
+		width: 95%;
+		padding-left: 10px;
+	}
 }
